syntax = "proto3";

option csharp_namespace = "Consulltorio_Medico_Autenticacion.Protos";

import "Protos/UsuarioService.proto";

service LoginService{
	rpc Login(Auth.UsuarioLogin) returns (Token);
}
message Token{
	string token=1;
}